cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(DeviceIo)

if(CPU_ARCH STREQUAL "arm")
	message("CPU_ARCH is ${CPU_ARCH}")
    if(BLUEZ)
        message("BLUETOOTH_BRANCH is BLUEZ")
        install(FILES ${CMAKE_SOURCE_DIR}/DeviceIO/lib32/libDeviceIo_bluez.so DESTINATION ${CMAKE_INSTALL_PREFIX}/lib RENAME libDeviceIo.so)
    elseif(BSA)
        if(CYPRESS)
            message("BLUETOOTH_BRANCH is BSA:CYPRESS")
            install(FILES ${CMAKE_SOURCE_DIR}/DeviceIO/lib32/libDeviceIo_cypress.so DESTINATION ${CMAKE_INSTALL_PREFIX}/lib RENAME libDeviceIo.so)
        elseif(BROADCOM)
            message("BLUETOOTH_BRANCH is BSA:BROADCOM")
            install(FILES ${CMAKE_SOURCE_DIR}/DeviceIO/lib32/libDeviceIo_broadcom.so DESTINATION ${CMAKE_INSTALL_PREFIX}/lib RENAME libDeviceIo.so)
        endif()
    endif()
endif()
if(CPU_ARCH STREQUAL "aarch64")
	message("CPU_ARCH is ${CPU_ARCH}")
    if(BLUEZ)
        message("BLUETOOTH_BRANCH is BLUEZ")
        install(FILES ${CMAKE_SOURCE_DIR}/DeviceIO/lib64/libDeviceIo_bluez.so DESTINATION ${CMAKE_INSTALL_PREFIX}/lib RENAME libDeviceIo.so)
    elseif(BSA)
        if(CYPRESS)
            message("BLUETOOTH_BRANCH is BSA:CYPRESS")
            install(FILES ${CMAKE_SOURCE_DIR}/DeviceIO/lib64/libDeviceIo_cypress.so DESTINATION ${CMAKE_INSTALL_PREFIX}/lib RENAME libDeviceIo.so)
        elseif(BROADCOM)
            message("BLUETOOTH_BRANCH is BSA:BROADCOM")
            install(FILES ${CMAKE_SOURCE_DIR}/DeviceIO/lib64/libDeviceIo_broadcom.so DESTINATION ${CMAKE_INSTALL_PREFIX}/lib RENAME libDeviceIo.so)
        endif()
    endif()
endif()
install(DIRECTORY ${CMAKE_SOURCE_DIR}/DeviceIO/include/DeviceIo DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
